...
        attendees: [
            Attendee(id: Attendee.ID(), name: "Blob"),
            Attendee(id: Attendee.ID(), name: "Blob Jr"),
        ],
        duration: .seconds(60 * 10),
        theme: .periwinkle,
        title: "Engineering"
    )

    static let designMock = Self(
        id: Standup.ID(),
        attendees: [
            Attendee(id: Attendee.ID(), name: "Blob Sr"),
...
